Player can add name

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,14 @@
-Testing infrastructure working!
+<center>
+<h1>Welcome! Please enter your name!</h1>
+
+<form action='/name' method='post'>
+  <div>
+    <label for='player_name'>
+    <input type='text' name='player_name'>
+  </label>
+  </div>
+  <br>
+  
+  <div>
+    <button type='submit'>Submit</button>
+</center>
