--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
   </label>
   </div>
   <br>
-  
+
   <div>
-    <button type='submit'>Submit</button>
+    <button type='submit' value ='submit'>Submit</button>
 </center>
