--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -1,3 +1,15 @@
 <center>
 <h1>Welcome, <%= @name %></h1>
-</center
+<br>
+<br>
+<div>
+  <h1>Let's play!</h1>
+</div>
+<div>
+  What is the capital of Cambodia?
+  <br>
+  When did the Vietnam War officially end?
+  <br>
+  What is the name of the Wonder of the World, located in Mexico?
+</div>
+</center>
