--- a/views/quiz.erb
+++ b/views/quiz.erb
@@ -5,11 +5,17 @@
 <div>
   <h1>Let's play!</h1>
 </div>
-<div>
+<!-- <div>
   What is the capital of Cambodia?
   <br>
   When did the Vietnam War officially end?
   <br>
   What is the name of the Wonder of the World, located in Mexico?
-</div>
+</div> -->
+
+<ul>
+  <% @questions.each do |question| %>
+    <li><%= question %></li>
+    <% end %></li>
+</ul>
 </center>
